# FastAPI_Sample

./: .gitignore  README  README.md  docker-compose.yml
api/: alembic.ini  database_setting.py  main.py  migrate_db.py  pyproject.toml  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 38580d54cb37_create_tables.py  9515095d9355_create_tables.py  aed638331fe5_create_tables.py  d16c530aa013_create_tables.py
api/cruds/: anime_vote_crud.py  login_crud.py
api/database/: anime_vote_crud.py  anime_vote_db.py  bbs_db.py  login_db.py
api/models/: anime_list_model.py  anime_vote_model.py  bbs_thread_model.py  token_model.py  user_model.py
api/routers/: anime_vote_router.py  bbs_router.py  image_router.py  login_router.py
api/schemas/: anime_vote_schema.py  bbs_list_schema.py  bbs_response_schema.py  bbs_schema.py  bbs_thread_schema.py  login_schema.py
api/test/: test_anime_vote_router.py
backend/: .env  Dockerfile  database_setting.py  log_setting.py  main.py  password_hash.py  requirements.txt
backend/alembic/: env.py
backend/const/: error.py  error_message.py  flag_value.py  initial_value.py  swagger_tag.py
backend/descriptions/: bbs_thread_description.py  users_description.py
backend/models/: bbs_threads_model.py  users_model.py
backend/routers/: bbs_threads_router.py  users_router.py
backend/schemas/: bbs_threads_schema.py  success_schema.py  users_schema.py
backend/stores/: bbs_threads_store.py  users_store.py
backend/test/: test_users_router.py
docker/api/: Dockerfile  requirements.txt
mysql/: Dockerfile  my.cnf
(+3 files in other folders)
